--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p>This is a new git repo.</p>
 <p>This is a new feature (dropdown)</p>
 <p>This is a new feature. (button)</p>
-<p> this is a new new feature </p>
+<p> this is a new new feature (new button)</p>
